--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_bg"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".signup">
 
-    <!-- NU Logo at the top left corner -->
-    <ImageView
-        android:id="@+id/nu_logo_loginpage"
-        android:layout_width="86dp"
-        android:layout_height="91dp"
-        android:layout_gravity="start|top"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/nu_logo2" />
+    <!-- Fixed top section -->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <!-- Scrollable content -->
+        <!-- NU Logo at the top left corner -->
+        <ImageView
+            android:id="@+id/nu_logo_loginpage"
+            android:layout_width="86dp"
+            android:layout_height="91dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="30dp"
+            app:srcCompat="@drawable/nu_logo2" />
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="20dp"
+        android:text="Sign up"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <!-- Scrollable section including input fields and bottom elements -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/formContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="145dp"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:text="Sign up"
-                android:textColor="@color/black"
-                android:textSize="30sp"
-                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/txtGname"
@@ -121,52 +129,74 @@
                 android:padding="15dp"
                 android:textColor="@color/black" />
 
-            <EditText
-                android:id="@+id/txtPass"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="30dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="Create Password"
-                android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@color/black" />
+                android:layout_marginEnd="30dp">
 
-            <Button
-                android:id="@+id/loginButton"
-                android:layout_width="178dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:backgroundTint="@color/black"
-                android:onClick="signup"
-                android:text="Register"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                app:cornerRadius="20dp" />
+                <EditText
+                    android:id="@+id/txtPass"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="Create Password"
+                    android:inputType="textPassword"
+                    android:padding="15dp"
+                    android:textColor="@color/black" />
 
-            <TextView
-                android:id="@+id/spanLogin"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/togglePassword"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginEnd="15dp"
+                    android:src="@drawable/ic_eye_off"
+                    android:clickable="true"
+                    android:focusable="true" />
+
+            </FrameLayout>
+
+            <!-- Bottom section now inside ScrollView -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:text="Go Back to Login"
-                android:textColor="@color/black" />
+                android:orientation="vertical"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp">
 
+                <Button
+                    android:id="@+id/loginButton"
+                    android:layout_width="178dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/black"
+                    android:onClick="signup"
+                    android:text="Register"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    app:cornerRadius="20dp" />
+
+                <TextView
+                    android:id="@+id/spanLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:text="Go Back to Login"
+                    android:textColor="@color/black" />
+
+                <ImageView
+                    android:id="@+id/dr_logo_loginpage"
+                    android:layout_width="167dp"
+                    android:layout_height="58dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="20dp"
+                    app:srcCompat="@drawable/dr_logo" />
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-    <!-- Logo at the bottom right corner -->
-    <ImageView
-        android:id="@+id/dr_logo_loginpage"
-        android:layout_width="167dp"
-        android:layout_height="58dp"
-        android:layout_gravity="end|bottom"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
-        app:srcCompat="@drawable/dr_logo" />
-
-</FrameLayout>
+</LinearLayout>
