--- a/app/src/main/res/layout/activity_reservations.xml
+++ b/app/src/main/res/layout/activity_reservations.xml
@@ -72,6 +72,19 @@
                 android:layout_marginEnd="20dp"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/default_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textAlignment="center"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="You have no upcoming reservation schedule"
+                    android:textColor="@color/gray"
+                    android:textSize="15sp"
+                    android:textStyle="italic"
+                    android:visibility="gone" />
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
